[package]
name = "rust_advanced_string_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8.5", features = ["getrandom", "small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.78"

[features]
wasm = []