[package]
name = "advanced_string_generator"
version = "0.1.0"
edition = "2021"
authors = ["Edward Igarashi <info@igarashi.net>"] # Your name and email
description = "A command-line tool for generating strings based on customizable regex patterns."
license = "MIT" # Your chosen license, such as MIT, Apache-2.0, etc.
repository = "https://github.com/edwardigarashi/Rust-Advanced-String-Generator"
documentation = "https://igarashi.net/rust-advanced-string-generator/"
readme = "README.md"
keywords = ["regex", "generator", "cli", "rust"]
categories = ["command-line-utilities", "text-processing", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8.5", features = ["getrandom", "small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.78"

[features]
wasm = []